--- a/Servers/Tomcat v7.0 Server at localhost-config/catalina.properties
+++ b/Servers/Tomcat v7.0 Server at localhost-config/catalina.properties
@@ -34,7 +34,7 @@ org.apache.naming.resources.,org.apache.tomcat.
 package.definition=sun.,java.,org.apache.catalina.,org.apache.coyote.,\
 org.apache.jasper.,org.apache.naming.,org.apache.tomcat.
 
-#
+#dnyanu
 #
 # List of comma-separated paths defining the contents of the "common"
 # classloader. Prefixes should be used to define what is the repository type.
